# journal-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  README.md  pyproject.toml
.devcontainer/: .zshrc  devcontainer.json  post-create-command.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: gitleaks.yml  main.yml  security.yml  test.yml
journal_ai/: __init__.py  config.py  logger.py  main.py  models.py  rag.py  storage.py  utils.py
journal_ai/journal/: journal.py  models.py  tags.py
journal_ai/tests/: test_models.py  test_storage.py  test_utils.py
journal_ai/tests/journal/: test_tags.py
tests/: conftest.py
tests/integration/: test_create.py  test_delete.py
tests/unit/: test_storage.py  test_utils.py
tests/unit/journal/: test_models.py
