[project]
name = "journal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "faiss-cpu>=1.9.0.post1",
    "openai>=1.59.8",
]

[project.scripts]
journal-ai = "journal_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["journal_ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
]
