[project]
name = "journal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "faiss-cpu>=1.9.0.post1",
    "openai>=1.59.8",
]


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
]
test = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.4",
    "bandit>=1.8.3",
]

[project.scripts]
journal-ai = "journal_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["journal_ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff]
# Enable Black compatibility
line-length = 88
target-version = "py312"

# Enable rules including isort (I) and format
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

# Isort settings
[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "journal_ai/",
    "tests/"
]
addopts = "--doctest-modules"

[[tool.mypy.overrides]]
module = ["faiss.*"]
follow_untyped_imports = true
